--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -64,8 +64,8 @@
                         class="bi bi-circle"></i><span>Add Fields</span></a></li>
                 <li><a th:href="@{/bisag/admin/cancellation_requests}"><i
                         class="bi bi-circle"></i><span>Cancellation Requests</span></a></li>
-                <li><a th:href="@{/bisag/admin/manage_leave_applications}"><i
-                        class="bi bi-circle"></i><span>Manage Leave Applications</span></a></li>
+                <li><a th:href="@{/bisag/admin/feedback_form_list}"><i
+                        class="bi bi-circle"></i><span>Feedback Applications</span></a></li>
                 <li><a th:href="@{/bisag/admin/undertaking}"><i
                         class="bi bi-circle"></i><span>Add Undertaking</span></a></li>
 
