--- a/src/main/resources/templates/fragments/internAsideFragment.html
+++ b/src/main/resources/templates/fragments/internAsideFragment.html
@@ -96,7 +96,14 @@
 				<li><a th:href="@{/bisag/intern/submit_forms}"> <i
 						class="bi bi-circle"></i><span>Submit Forms</span>
 				</a></li>
-			</ul></li>
+			</ul>
+			<ul id="preject-def-nav" class="nav-content collapse "
+				data-bs-parent="#admin-nav">
+				<li><a th:href="@{/bisag/intern/feedback_form}"> <i
+						class="bi bi-circle"></i><span>Feedback Forms</span>
+				</a></li>
+			</ul>
+		</li>
 	</ul>
 
 	<ul class="sidebar-nav" id="def-nav">
