--- a/src/main/resources/templates/fragments/internHeaderFragment.html
+++ b/src/main/resources/templates/fragments/internHeaderFragment.html
@@ -37,14 +37,14 @@
 				<ul class="dropdown-menu dropdown-menu-end"
 					aria-labelledby="profileDropdown">
 					<li><a class="dropdown-item d-flex align-items-center"
-						   href="users-profile.html"> <i class="bi bi-person"></i> <span>My
+						   href=""> <i class="bi bi-person"></i> <span>My
 								Profile</span>
 					</a></li>
 
-					<li><a class="dropdown-item d-flex align-items-center"
-						   href="pages-faq.html"> <i class="bi bi-question-circle"></i> <span>Need
-								Help?</span>
-					</a></li>
+<!--					<li><a class="dropdown-item d-flex align-items-center"-->
+<!--						   href=""> <i class="bi bi-question-circle"></i> <span>Need-->
+<!--								Help?</span>-->
+<!--					</a></li>-->
 				</ul> <!-- End Profile Dropdown -->
 			</li>
 
