--- a/src/main/resources/templates/admin/intern_application_detail.html
+++ b/src/main/resources/templates/admin/intern_application_detail.html
@@ -163,10 +163,10 @@
                     <th>Is Active</th>
                     <td><label><input type="radio" name="isActive"
                                       value="true" th:checked="${intern.get().isActive}"
-                                      class="no-border" readonly> True</label> <label><input
+                                      class="no-border" readonly> Yes</label> <label><input
                             type="radio" name="isActive" value="false"
                             th:checked="${!intern.get().isActive}" class="no-border"
-                            readonly> False</label></td>
+                            readonly> No</label></td>
                 </tr>
 
                 <!-- Hidden field for ID -->
