--- a/src/main/resources/templates/admin/leave_history.html
+++ b/src/main/resources/templates/admin/leave_history.html
@@ -87,7 +87,7 @@
                 <th>Leave Type</th>
                 <th>Start Date</th>
                 <th>End Date</th>
-                <th>Reason</th>
+                <th>Subject</th>
                 <th>Guide Approval</th>
                 <th>Admin Approval</th>
                 <th>Reason of Rejection</th>
