--- a/src/main/resources/templates/admin/admin_pending_def_approvals.html
+++ b/src/main/resources/templates/admin/admin_pending_def_approvals.html
@@ -107,7 +107,9 @@
 	</div>
 	<input type="text" class="mb-4" id="searchInput"
 		   placeholder="Search...">
-
+	<!-- Success/Error Messages -->
+	<div class="alert alert-success" th:if="${successMessage}" th:text="${successMessage}"></div>
+	<div class="alert alert-danger" th:if="${errorMessage}" th:text="${errorMessage}"></div>
 	<table class="table datatable table-bordered">
 		<thead>
 		<tr>
