--- a/src/main/resources/templates/admin/intern_detail.html
+++ b/src/main/resources/templates/admin/intern_detail.html
@@ -245,10 +245,10 @@ iframe {
 						<th>Is Active</th>
 						<td><label><input type="radio" name="isActive"
 								value="true" th:checked="${intern.get().isActive}"
-								class="no-border" readonly> True</label> <label><input
+								class="no-border" readonly> Working</label> <label><input
 								type="radio" name="isActive" value="false"
 								th:checked="${!intern.get().isActive}" class="no-border"
-								readonly> False</label></td>
+								readonly> Cancel</label></td>
 					</tr>
 					<tr class="d-none">
 						<td><input type="text" name="id"
