--- a/src/main/resources/templates/guide/pending_leaves.html
+++ b/src/main/resources/templates/guide/pending_leaves.html
@@ -124,7 +124,11 @@
               </thead>
               <tbody>
               <tr th:each="leave : ${pendingLeaves}">
-                <td th:text="${leave.id}"></td>
+                <td>
+                  <a th:href="@{/bisag/guide/leave_details/{id}(id=${leave.id})}">
+                    <span th:text="${leave.id}"></span>
+                  </a>
+                </td>
                 <td th:text="${leave.internId}"></td>
                 <td th:text="${leave.fromDate}"></td>
                 <td th:text="${leave.toDate}"></td>
