--- a/src/main/resources/templates/fragments/headerFragment.html
+++ b/src/main/resources/templates/fragments/headerFragment.html
@@ -57,7 +57,7 @@
 
 					<li><a class="dropdown-item d-flex align-items-center"
 						   th:href="@{/bisag/admin/cancellation_requests}"> <i class="fa fa-times"
-																			   aria-hidden="true"></i> <span>Pending cancellation Requests <span
+																			   aria-hidden="true"></i> <span>Pending Cancellation Requests <span
 							th:if="${requestedCancellationsCount > 0}" class="notif"
 							th:text="${requestedCancellationsCount}"></span>
 							</span>
