--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -130,6 +130,9 @@
                         <li><a th:href="@{/bisag/admin/admin_weekly_report}"> <i
                                 class="bi bi-circle"></i><span>All Weekly Reports</span>
                         </a></li>
+                        <li><a th:href="@{/bisag/admin/weekly-reports/pending}"> <i
+                                class="bi bi-circle"></i><span>Pending Weekly Reports</span>
+                        </a></li>
                         <li><a th:href="@{/bisag/admin/admin_pending_final_reports}">
                             <i class="bi bi-circle"></i><span>Final Reports</span>
                         </a></li>
