--- a/src/main/resources/templates/admin/intern_application.html
+++ b/src/main/resources/templates/admin/intern_application.html
@@ -113,6 +113,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">Approval Pending Applications</h5>
+						<h5 class="card-title"><a href="/bisag/admin/register_internn">Add Intern Applications</a></h5>
 						<!-- Table with stripped rows -->
 						<table class="table datatable">
 							<thead>
