--- a/src/main/resources/templates/admin/relieving_records_detail.html
+++ b/src/main/resources/templates/admin/relieving_records_detail.html
@@ -136,9 +136,14 @@
       <th>Briefing of Information Security responsibilities after leaving BISAG-N</th>
       <td th:text="${records.get().information}">1</td>
     </tr><tr>
+      <th>End Interview</th>
+      <td th:text="${records.get().endInteriew}">1</td>
+    </tr><tr>
       <th>Weekly Report</th>
       <td th:text="${records.get().weeklyReport}">1</td>
-    </tr><tr>
+    </tr><th>Final Report</th>
+      <td th:text="${records.get().finalReport}">1</td>
+      </tr><tr>
       <th>Attendance</th>
       <td th:text="${records.get().attendance}">1</td>
     </tr><tr>
